[project]
dependencies = []
name = "hs-models"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
hs_models = { path = ".", editable = true }
pymc-extras = {git = "https://github.com/conor-dempsey-london/pymc-extras.git"}

[tool.pixi.tasks]

[tool.pixi.dependencies]
boto3 = ">=1.40.18,<2"
scikit-learn = ">=1.7.1,<2"
bambi = ">=0.15.0,<0.16"
ipykernel = ">=6.30.1,<7"
ipywidgets = ">=8.1.7,<9"
seaborn = ">=0.13.2,<0.14"
arviz = ">=0.22.0,<0.23"
scipy = ">=1.16.2,<2"
python-dotenv = ">=1.1.1,<2"
preliz = ">=0.22.0,<0.23"
